# ifj-ial-project-code

./: .gitignore  CMakeLists.txt  CODE_STYLE.md  GIT_RULES.md  README.md  UNIT_TESTS.md  count-points.sh  create-archive.sh  rozdeleni  unity_config.h
.github/: auto_assign.yml
.github/workflows/: basic-tests.yml  error-tests.yml  final-tests.yml  github-issue-automation.yml  github-pr-automation.yml  points-counter.yml  unit-tests.yml
design/: grammar.txt  precedence_table.xlsx
mimick/src/: core.c
src/: Makefile  Makefile.patch  context.h  errno.h  exit_codes.h  expr_parser.c  expr_parser.h  exprstack.c  exprstack.h  generator.c  generator.h  get-dependency-list.sh  identifier.c  identifier.h  kwtable.c  kwtable.h  logger.h  main.c  parser.c  parser.h  scanner.c  scanner.h  stack.c  stack.h  string.c  string.h  string_factory.c  string_factory.h  symqueue.c  symqueue.h  symstack.c  symstack.h  symtable.c  symtable.h  token.h
test/basics/: is_it_ok.patch  is_it_ok.sh.patch  other-assignment-rules.sh
test/error/: ifj21.tl  run-error-tests.sh  test-01.ifj21  test-02.ifj21  test-03.ifj21  test-04.ifj21  test-05.ifj21  test-06.ifj21  test-07.ifj21  test-08.ifj21  test-09.ifj21  test-10.ifj21  test-11.ifj21
test/final/: run-final-tests.sh  test-01.ifj21  test-02.ifj21  test-04.ifj21  test-06.ifj21  test-09.ifj21  test-10.ifj21  test-11.ifj21  test-11.in  test-12.ifj21  test-13.ifj21  test-14.ifj21  test-15.ifj21  test-16.ifj21  test-17.ifj21  test-18.ifj21  test-19.ifj21  test-20.ifj21  test-20.in
test/ifjcode21/: test-expr-parser.sh
test/unit/: get-results.sh  (+10 more)
(+10 files in other folders)
